updated font-weight issues on mobile

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -59,6 +59,7 @@ body {
   padding-top: var(--navbar-height);
   font-family: var(--font-family);
   font-optical-sizing: auto;
+  font-weight: 400;
   font-style: normal;
   color: var(--light-mode-text-color);
 }
@@ -1920,7 +1921,7 @@ hr {
 }
 
 .bold {
-  font-weight: 700 !important;
+  font-weight: 500 !important;
 }
 
 .select2-container--open .select2-dropdown--above {
